FIX sdio fafts dma
Signed-off-by: weison_pam <weisonweileen@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "ffconf.h": "c",
         "struct_typedef.h": "c",
         "usart.h": "c",
-        "fatfs.h": "c"
+        "fatfs.h": "c",
+        "sdio.h": "c",
+        "main.h": "c",
+        "fatfs_platform.h": "c"
     }
 }
