--- a/STM32-for-VSCode.config.yaml
+++ b/STM32-for-VSCode.config.yaml
@@ -10,7 +10,7 @@ target: SDCard
 # Can be C or C++
 language: C
 
-optimization: Og
+optimization: O0
 
 # MCU settings
 targetMCU: stm32f4x
@@ -78,7 +78,7 @@ includeDirectories:
   - Core/Src/**
   - Core/Lib/**
   - bsp/**
-  - module/**
+  - modules/**
   - Middlewares/Third_Party/FatFs/src/RTT/**
 
 
@@ -92,7 +92,7 @@ sourceFiles:
   - Core/Src/**
   - Core/Lib/**
   - bsp/**
-  - module/**
+  - modules/**
   - Middlewares/Third_Party/FatFs/src/RTT/SEGGER_RTT_printf.c
   - Middlewares/Third_Party/FatFs/src/RTT/SEGGER_RTT.c
 
